[gd_scene load_steps=32 format=3 uid="uid://3ymra7wyqdwr"]

[ext_resource type="Texture2D" uid="uid://csaypi7h22f1w" path="res://assets/sprites/angel/idle.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://by3c3mwiwnsms" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://dkwln5746wpg0" path="res://assets/sprites/angel/grab.png" id="2_tuyoq"]
[ext_resource type="Texture2D" uid="uid://b32wedsuyf441" path="res://assets/sprites/angel/run.png" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://b440md4diu3y7" path="res://assets/sprites/angel/jump_wings.png" id="4_tuyoq"]
[ext_resource type="Texture2D" uid="uid://d2kwdn3ha0qy1" path="res://assets/sprites/angel/death.png" id="5_qlg0r"]
[ext_resource type="Texture2D" uid="uid://dp2usl25qx4o0" path="res://assets/sprites/progressbar_empty.png" id="7_smehm"]
[ext_resource type="Texture2D" uid="uid://7gwcpolwtifw" path="res://assets/sprites/progressbar_full.png" id="8_ur7pv"]
[ext_resource type="AudioStream" uid="uid://cvi86j2dermew" path="res://assets/sounds/hurt.wav" id="9_ur7pv"]
[ext_resource type="PackedScene" uid="uid://bdo31r2atnr2u" path="res://scenes/pause_menu.tscn" id="10_y4r1p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_tuyoq")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("2_tuyoq")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("2_tuyoq")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("2_tuyoq")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_3vyb7")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_3vyb7")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("4_tuyoq")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("3_qhqgy")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("3_qhqgy")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_qhqgy")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_qhqgy")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("3_qhqgy")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("3_qhqgy")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("3_qhqgy")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("5_qlg0r")
region = Rect2(240, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_tuyoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}],
"loop": true,
"name": &"grab",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": false,
"name": &"splat",
"speed": 2.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tuyoq"]
radius = 4.0
height = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dqkch"]
radius = 7.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_g2els")
metadata/_edit_lock_ = true

[node name="CharacterSprite" type="AnimatedSprite2D" parent="."]
z_index = 999
sprite_frames = SubResource("SpriteFrames_tuyoq")
animation = &"idle"
metadata/_edit_lock_ = true

[node name="CharacterCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_tuyoq")

[node name="JumpTimer" type="Timer" parent="."]
autostart = true

[node name="GlideTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="JumpProgressBar" type="TextureProgressBar" parent="."]
z_index = 900
offset_left = -5.0
offset_top = -10.0
offset_right = 275.0
offset_bottom = 43.0
scale = Vector2(0.04, 0.04)
texture_under = ExtResource("7_smehm")
texture_progress = ExtResource("8_ur7pv")
metadata/_edit_lock_ = true

[node name="GrabArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_dqkch")
debug_color = Color(0.815476, 0.29832, 0.702978, 0.42)

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ur7pv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("10_y4r1p")]

[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="GlideTimer" to="." method="_on_glide_timer_timeout"]
[connection signal="body_entered" from="GrabArea" to="." method="_on_grab_area_body_entered"]
[connection signal="body_exited" from="GrabArea" to="." method="_on_grab_area_body_exited"]
